# Homework

./: .gitignore  1.cpp  Dengyu.dev  Dengyu.layout  LICENSE  Makefile.win  Mar6th.cpp  README.md  main.cpp  pdfRenamer.cpp  rational_number.cpp
C语言程序设计/: .gitignore  CMakeLists.txt  Dengyu.id0  Dengyu.id2  README.md  main.c  strings.c  strings.h  test.txt
C语言程序设计/classTest/: Apr10th.c  Apr17th.c  Apr24th.c  Apr3rd.c  May15th.c  May22nd.c  May8th.c  date.h
C语言程序设计/classTest/Apr24th/: file2.c  main1.c  main3.c
C语言程序设计/final_design/: README.en.md  README.md
C语言程序设计/final_design/Arduino 328/: Arduino 328.pdsprj
C语言程序设计/final_design/Keil/: 51MCU.c  51MCU.uvproj  controller.h  framework.h  global.h  module.h  onClear.c  onLoad.c  onPause.c  onResume.c  onSave.c  onStart.c  onStop.c  pinSettings.h  showtime.c  timerModule.c  view.h
C语言程序设计/final_design/arduino/: arduino.ino  controller.h  framework.h  global.h  module.h  onClear.cpp  onLoad.cpp  onPause.cpp  onResume.cpp  onSave.cpp  onStart.cpp  onStop.cpp  pinSettings.h  showtime.cpp  timerModule.cpp  view.h
C语言程序设计/final_design/doc/: controller.md  module.md  view.md  主模块.md  仿真说明.md  协作教程.md  引脚说明.md  计时器模块.md
C语言程序设计/homework/: Apr10th.c  Apr17th.c  Apr4th.c  Mar13th.c  Mar20th.c  Mar27th.c  Mar6th.c  May15th.c  May22nd.c  May8th.c  date.h
C语言程序设计/others/: 1.c  findASpecialCollection.c  findSaddlePoint.c  pdfRenamer.c  program.h  rational_number.c  sortTest.c
console/: Apr10th.c  Apr3rd.c  Dengyu.dev  Dengyu.id1  Dengyu.layout  Dengyu.nam  Dengyu.til  Makefile.win  Mar13th.cpp  Mar20th.cpp  Mar27th.c  Mar6th.cpp  main.c  main.cpp  strings.h  stu_sort_new.csv  stud.csv  student_data.csv
console/classTest/: Apr10th.c  Apr17th.c  May15th.c  date.h
console/classTest/Apr24th/: ClassTestApr24th_1.dev  ClassTestApr24th_2.dev  ClassTestApr24th_3.dev  ClassTestApr24th_3.layout  file1.c  main2.c
console/homework/: Apr10th.c  Mar27th.c  May15th.c  May22nd.c  date.h
console/others/: 1.c  findASpecialCollection.c  program.h  rational_number.c
matlab语言/: experiment1.mlx  experiment2.mlx  experiment3.mlx  experiment4.mlx  experiment5.mlx  experiment6.mlx  experiment7.mlx
myGame/: Makefile.win  main.cpp  myGame.dev  myGame.layout  mystrings.h  onPaint.cpp  onTimer.cpp
win32API/: CMakeLists.txt  README.md  onPaint.cpp  onTimer.cpp
数值计算方法/: 【1】LU分解法解线性方程组.c  【2】特定图片的线性插值.c  【3】特定图片的牛顿插值.c  【4】星历的计算.c  【5】曲面围成体积的计算.c  【6】返回器再入速度的计算.c  【7】雅可比迭代.c  【8】着陆点计算.c
数值计算方法/matrix/: matrix.c  matrix.h  matrix_err.c  matrix_err.h
科研创新训练/: controller_for_JY901_v1_0.ino
科研创新训练/RocketControl/: RocketControl.uvguix.12450  RocketControl.uvoptx  RocketControl.uvprojx  configuration.c
科研创新训练/RocketControl/Listings/: RocketControl.map
科研创新训练/RocketControl/RTE/_Controller/: RTE_Components.h
科研创新训练/RocketControl/UnitTest/: UnitTest.sln
科研创新训练/RocketControl/UnitTest/UnitTest/: UnitTest.c  UnitTest.vcxproj  UnitTest.vcxproj.filters
科研创新训练/RocketControl/src/: main.c
(+47 files in other folders)
